# combat-sts

./: CMakeLists.txt  README.md  main.cpp
include/: GameState.h  Monster.h  State.h
include/base/: Base.h  Buff.h  Card.h  Monster.h  MonsterEncounter.h  MonsterGroup.h  Potion.h  Random.h  Relic.h
include/combat/: Actions.h  CardInstance.h  CardManager.h  CombatState.h  MonsterGroup.h  Player.h
include/const/: Cards.h  Character.h  MonsterMoves.h  MonsterStatus.h  Monsters.h  PlayerStatus.h  Potions.h  Relics.h  Rooms.h
include/game/: CardContainer.h  GameState.h  RelicContainer.h
src/: State.cpp
src/base/: Monster.cpp
src/combat/: Actions.cpp  CardInstance.cpp  CardManager.cpp  CombatState.cpp  MonsterGroup.cpp  Player.cpp
src/game/: CardContainer.cpp  GameState.cpp  RelicContainer.cpp
